--- a/Docker Notebook.ipynb
+++ b/Docker Notebook.ipynb
@@ -2,15 +2,38 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "# Docker Overview\n",
+    "In this bash notebook we cover all the basic commands that docker provides"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Setting up bash kernel\n",
-    "Making sure we set up our bash kernel"
+    "# Part One: \n",
+    "## Building a Web Farm for Developing and Testing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "### Starting from scratch\n",
+    "We can see that we are now starting without any images"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -19,39 +42,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/alejandrosaucedo/Programming/devnull/helloworlddocker/venv/bin/jupyter-qtconsole\", line 7, in <module>\n",
-      "    from qtconsole.qtconsoleapp import main\n",
-      "  File \"/Users/alejandrosaucedo/Programming/devnull/helloworlddocker/venv/lib/python3.6/site-packages/qtconsole/qtconsoleapp.py\", line 60, in <module>\n",
-      "    from qtconsole.qt import QtCore, QtGui\n",
-      "  File \"/Users/alejandrosaucedo/Programming/devnull/helloworlddocker/venv/lib/python3.6/site-packages/qtconsole/qt.py\", line 23, in <module>\n",
-      "    QtCore, QtGui, QtSvg, QT_API = load_qt(api_opts)\n",
-      "  File \"/Users/alejandrosaucedo/Programming/devnull/helloworlddocker/venv/lib/python3.6/site-packages/qtconsole/qt_loaders.py\", line 309, in load_qt\n",
-      "    api_options))\n",
-      "ImportError: \n",
-      "    Could not load requested Qt binding. Please ensure that\n",
-      "    PyQt4 >= 4.7, PyQt5 or PySide >= 1.0.3 is available,\n",
-      "    and only one is imported per session.\n",
-      "\n",
-      "    Currently-imported Qt library:   None\n",
-      "    PyQt4 installed:                 False\n",
-      "    PyQt5 installed:                 False\n",
-      "    PySide >= 1.0.3 installed:       False\n",
-      "    Tried to load:                   ['pyqt5', 'pyside', 'pyqt']\n",
-      "    \n",
-      "Jupyter console 5.1.0\n",
-      "\n",
-      "GNU bash, version 3.2.57(1)-release (x86_64-apple-darwin15)\n",
-      "Copyright (C) 2007 Free Software Foundation, Inc.\n",
-      "\n",
-      "\n",
-      "\n"
+      "REPOSITORY          TAG                 IMAGE ID            CREATED             SIZE\n"
      ]
     }
    ],
    "source": [
-    "jupyter qtconsole --kernel bash\n",
-    "jupyter console --kernel bash"
+    "docker images"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Download Centos 6 Image\n",
+    "We start by using the 'pull' command provided by docker to get the centos6:latest image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "centos6: Pulling from library/centos\n",
+      "\n",
+      "\u001b[1BDigest: sha256:1092df198d3da4faccc0660941b763ce5adf133b0ec71701b760d6f173c1f47b\n",
+      "Status: Downloaded newer image for centos:centos6\n"
+     ]
+    }
+   ],
+   "source": [
+    "docker pull centos:centos6"
    ]
   },
   {
