--- a/Docker Notebook - Part 4 - Building a web farm for development and testing.ipynb
+++ b/Docker Notebook - Part 4 - Building a web farm for development and testing.ipynb
@@ -174,12 +174,256 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cloning into 'dockerwwwfull'...\n",
+      "done.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# We want to clone the repository to treat this as if it was the prod version\n",
+    "rm -rf dockerwwwfull\n",
+    "git clone $(pwd) dockerwwwfull\n",
+    "mv dockerwwwfull/dockergit dockerwww\n",
+    "rm -rf dockerwwwfull"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Starting docker\n",
+    "Now let's start our docker instances"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "REPOSITORY          TAG                 IMAGE ID            CREATED             SIZE\n",
+      "centos6             finalwebv1          758e7bcba59c        6 minutes ago       373 MB\n",
+      "centos6             serverv1            be824f20375e        28 minutes ago      373 MB\n",
+      "centos6             baseweb             34079efab3e4        2 hours ago         373 MB\n",
+      "centos              centos6             8315978ceaaa        4 months ago        195 MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "docker images"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **Launch PROD instance 2**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "f0396e16605a5b5e6abaefcc6640db58f8420591061986172d401ad2ddcb617b\n"
+     ]
+    }
+   ],
+   "source": [
+    "docker run -dit --name=devweb1 -p 8081:80 -v $(pwd)/dockerwww:/var/www/html centos6:finalwebv1 /bin/bash\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CONTAINER ID        IMAGE                COMMAND             CREATED             STATUS              PORTS                  NAMES\n",
+      "f0396e16605a        centos6:finalwebv1   \"/bin/bash\"         5 seconds ago       Up 4 seconds        0.0.0.0:8081->80/tcp   devweb1\n"
+     ]
+    }
+   ],
+   "source": [
+    "docker ps"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Launch PROD instance 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1c8098f3ec121a0679487e38459cc26b96178b71e96bb3741567e2ab9871111a\n"
+     ]
+    }
+   ],
+   "source": [
+    "docker run -dit --name=devweb2 -p 8082:80 -v $(pwd)/dockerwww:/var/www/html centos6:finalwebv1 /bin/bash\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CONTAINER ID        IMAGE                COMMAND             CREATED             STATUS              PORTS                  NAMES\n",
+      "1c8098f3ec12        centos6:finalwebv1   \"/bin/bash\"         4 seconds ago       Up 3 seconds        0.0.0.0:8082->80/tcp   devweb2\n",
+      "f0396e16605a        centos6:finalwebv1   \"/bin/bash\"         43 seconds ago      Up 43 seconds       0.0.0.0:8081->80/tcp   devweb1\n"
+     ]
+    }
+   ],
+   "source": [
+    "docker ps"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Nowboth are running!**\n",
+    "\n",
+    "## Inspect for IP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            \"SecondaryIPAddresses\": null,\n",
+      "            \"IPAddress\": \"172.17.0.2\",\n",
+      "                    \"IPAddress\": \"172.17.0.2\",\n"
+     ]
+    }
+   ],
+   "source": [
+    "docker inspect devweb1 | grep IPAddress"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            \"SecondaryIPAddresses\": null,\n",
+      "            \"IPAddress\": \"172.17.0.3\",\n",
+      "                    \"IPAddress\": \"172.17.0.3\",\n"
+     ]
+    }
+   ],
+   "source": [
+    "docker inspect devweb2 | grep IPAddress"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**We should be able to visit both of the IP addresses, as well as through both of the port of the http://localhost:8081 and http://localhost:8082**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Proxy and load balance\n",
+    "We will install nginx to proxy and load balance the connection to these both containers. \n",
+    "We will proxy port 80 into both port 8081 and 8082\n",
+    "### Make sure you have NGINX installed!\n",
+    "We should now have:\n",
+    "* NGINX running in port 8080\n",
+    "* One server running in port 8081\n",
+    "* Another server running in port 8082\n",
+    "\n",
+    "All we have to do is to access the NGINX file in sites-available, and add this to our file:\n",
+    "\n",
+    "``` bash\n",
+    "\n",
+    "upstream containerapp {\n",
+    "    server 127.0.0.1:8081;\n",
+    "    server 127.0.0.1:8082;\n",
+    "}\n",
+    "\n",
+    "server {\n",
+    "    listen *:80;\n",
+    "\n",
+    "    server_name 127.0.0.1;\n",
+    "    index index.html index.htm index.php;\n",
+    "\n",
+    "    access_log /Users/alejandrosaucedo/Programming/devnull/helloworlddocker/localweb.log;\n",
+    "    error_log /Users/alejandrosaucedo/Programming/devnull/helloworlddocker/localerr.log;\n",
+    "\n",
+    "    location / {\n",
+    "        proxy_pass http://containerapp;\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Multi-farm web setup!\n",
+    "This has allowed us to manage a multi-container setup that provides load balacing to our two apps from external access!\n"
+   ]
   }
  ],
  "metadata": {
