--- a/Docker Notebook - Balance loading 2 - Setting up the website.ipynb
+++ b/Docker Notebook - Balance loading 2 - Setting up the website.ipynb
@@ -448,7 +448,9 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
